# Scoring-Machine

./: .gitignore  Dockerfile  MANIFEST.in  README.md  build.sh  get-release.py  ip.sh  requirements.txt  setup.cfg  setup.py  start.sh  test.sh
.github/workflows/: build-back.yml  build-front.yml  python-app.yml  release-major.yml
app/: __init__.py  application.conf  blueprints.py  celery_task.py  scoring_functions.py  service.conf  service.py  sqlite_connection.py  utilities.py
app/celery_local/: background_tasks.py  celery_task.py  config.py
app/config/: application.conf
app/etc/: basic_db.sql
app/static/: index.css  login.css  scoring.css
app/templates/: base.html.j2  ecomm.tmpl.j2  internal_error.html.j2  not_found.html.j2  scoring.html.j2
back_end/: Dockerfile  __init__.py  actions.py  background.py  config_tasks.py  scoring_functions.py  scoring_tasks.py  service.py  tasks.py  util.py  utilities.py
back_end/config/: service.conf
back_end/ref/: config_ref.json  score_ref.json
config/: application.conf
front_end/: __init__.py  blueprints.py  database.py  utilities.py
front_end/config/: application.conf
front_end/etc/: basic_db.sql
front_end/sql/: recent_scores.sql
front_end/static/: base.css  config.css  info.css
front_end/templates/: base.html.j2  config.html.j2  dnsl.tmpl.j2  dnsw.tmpl.j2  index.html.j2  info.tmpl.j2  ldap.tmpl.j2  score-page.html.j2  scoring.html.j2  splunk.tmpl.j2
scoring_engine/: README.txt  __init__.py
scoring_engine/back_end/: __init__.py  actions.py  background.py  config_tasks.py  scoring_tasks.py  utilities.py
scoring_engine/back_end/config/: service.conf
scoring_engine/config/: application.conf
scoring_engine/front_end/: __init__.py  blueprints.py  database.py  utilities.py
scoring_engine/service/: scoring.engine.back.service  scoring.engine.front.service
scoring_engine/sql/: basic_db.sql  sql-server-build.sh  views.sql
sql/: basic_db.sql  sql.conf  views.sql
(+10 files in other folders)
