[metadata]
name = scoring-engine
version = 0.1
author= Gabe Stier
author_email= gabezter@gmail.com

[options]
include_package_data = True
install_requires =
    dnspython
    flask
    gunicorn[eventlet]
    django
    requests
    mysql-connector-python
    python-ldap
    nslookup
packages = find:

[options.data_files]
scoring-engine =
    scoring_engine/config/application.conf
    scoring_engine/back_end/config/service.conf

[options.entry_points]
console_scripts =
    engine = scoring_engine:start_server
    