[metadata]
name = scoring-engine
version = 0.2
author= Gabe Stier
author_email= gabezter@gmail.com

[options]
include_package_data = True
install_requires =
    dnspython
    flask
    gunicorn[eventlet]
    django
    requests
    mysql-connector-python
    python-ldap
    nslookup
packages = find:

[options.data_files]
scoring-engine =
    scoring_engine/config/application.conf
    scoring_engine/back_end/config/service.conf

scoring-engine/service = 
    scoring_engine/service/scoring.engine.back.service
    scoring_engine/service/scoring.engine.front.service

[options.entry_points]
console_scripts =
    engine-front = scoring_engine:start_front_server
    engine-back = scoring_engine:start_back_server
    