[metadata]
name = scoring-engine
version = 1.2.0
author = Gabe Stier
author_email = gabezter@gmail.com
url = https://github.com/gabe-stier/Scoring-Machine
license = GNU GENERAL PUBLIC LICENSE

[options]
include_package_data = True
install_requires =
    dnspython
    flask
    gunicorn[eventlet]
    django
    requests
    mysql-connector-python
    python-ldap
    nslookup
packages = find:


[options.entry_points]
console_scripts =
    engine-front = scoring_engine:start_front_server
    engine-back = scoring_engine:start_back_server
    scoring-engine = scoring_engine:system_command
    